appId: "com.recipedia"
---
- runFlow:
    file: "../../../flows/parameters/tags/navigateToTagsSettings.yaml"
    label: "Navigate to Tags Settings screen"

- runFlow:
    file: "../../../asserts/parameters/tags/en/assertTagsSettingsScreen.yaml"
    label: "Verify Tags Settings screen displays correctly with all tags"

- tapOn:
    id: "TagsSettings::AddButton"
    label: "Tap Add button to open add tag dialog"

- runFlow:
    file: "../../../asserts/parameters/tags/en/assertAddModalOpen.yaml"
    label: "Verify Add tag modal is displayed"

- tapOn:
    id: "TagsSettings::ItemDialog::AddModal::Name::CustomTextInput"
    label: "Focus on tag name input field"

- inputText:
    text: "TestTag"
    label: "Enter new tag name"


- tapOn:
    id: "TagsSettings::ItemDialog::AddModal::ConfirmButton"
    label: "Confirm adding the new tag"

- scrollUntilVisible:
    element:
      text: "TestTag"
    direction: DOWN
    speed: 60
    centerElement: true
    label: "Scroll to new tag"

- assertVisible:
    id: "TagsSettings::15::TagName"
    text: "TestTag"
    label: "New tag is displayed without reloading the screen"

- runFlow:
    file: "../../../flows/parameters/tags/returnToHome.yaml"
    label: "Return to Home screen"
