name: "1 - Recipe Read-Only From Search Flow"
appId: "com.recipedia"
tags:
  - recipe-view
---
- runFlow:
    file: "../../flows/setupFirstTest.yaml"
    label: "Setup - Launch app and wait for ready"

- tapOn:
    id: "BottomTabs::Search"
    label: "Action - Navigate to Search screen"

- tapOn:
    id: "SearchScreen::RecipeCards::1::Chicken Tacos"
    label: "Action - Open Chicken Tacos recipe"

- runFlow:
    file: "../../asserts/recipe/readonly/en/chickenTacos.yaml"
    label: "Assert - Verify Chicken Tacos recipe is displayed correctly"

- tapOn:
    id: "Recipe::AppBar::BackButton"
    label: "Action - Back to the Search Screen"

- runFlow:
    file: "../../asserts/search/en/assertSearchScreen.yaml"
    label: "Assert - Verify Search screen is displayed"

- tapOn:
    id: "BottomTabs::Home"
    label: "Cleanup - Navigate back to Home screen"
