appId: "com.recipedia"
---
- runFlow:
    file: "../../../flows/recipe/adding/manual/en/openAddManually.yaml"
    label: "Open manual recipe adding screen"

- runFlow:
    file: "../../../flows/recipe/adding/en/addRecipeImage.yaml"
    label: "Fill image of recipe"

- runFlow:
    file: "../../../flows/recipe/adding/manual/en/tryAddOnlyImageTitle.yaml"
    label: "Add title"

- runFlow:
    file: "../../../flows/recipe/adding/manual/en/tryAddOnlyImageTitleDescription.yaml"
    label: "Add description"

- runFlow:
    file: "../../../flows/recipe/adding/manual/en/tryAddOnlyImageTitleDescriptionTag.yaml"
    label: "Add tag"

- runFlow:
    file: "../../../flows/recipe/adding/manual/en/tryAddOnlyImageTitleDescriptionTagPerson.yaml"
    label: "Add persons"

- runFlow:
    file: "../../../flows/recipe/adding/manual/en/tryAddOnlyImageTitleDescriptionTagPersonIngredient.yaml"
    label: "Add ingredient"

- runFlow:
    file: "../../../flows/recipe/adding/manual/en/tryAddOnlyImageTitleDescriptionTagPersonIngredientTime.yaml"
    label: "Add time"

- runFlow:
    file: "../../../flows/recipe/adding/manual/en/tryAddFull.yaml"
    label: "Add preparation"

- tapOn:
    id: "BackButton::RoundButton"
    label: "Cancel recipe adding"

- tapOn:
    id: "ReduceButton::RoundButton"
    label: "Collapse FAB menu"

- tapOn:
    id: "BottomTabs::Search"
    label: "Navigate to Search screen"

- tapOn:
    id: "SearchScreen::SearchBar"
    label: "Focus on search bar"

- inputText:
    text: "Title"
    label: "Search for cancelled recipe"

- pressKey: enter

- assertNotVisible:
    text: "Title, Japanese, Prep. 56789 min, 2 p."
    label: "Recipe should not exist"

- tapOn:
    id: "SearchScreen::SearchBar::RightIcon"
    label: "Tap clear icon to remove search filter"

- tapOn:
    id: "BottomTabs::Home"
    label: "Return to home screen"
