appId: "com.recipedia"
---
- runFlow:
    file: "../../../flows/recipe/adding/fillTestRecipeFor2Persons.yaml"
    label: "Fill Test Recipe (2 persons, Pasta 200g, Tomatoes 100g)"

- scrollUntilVisible:
    element:
      id: "RecipeImage"
    direction: UP
    speed: 99
    label: "Scroll back to top"

- runFlow:
    file: "../../../asserts/recipe/edit/testRecipeFor2Persons.yaml"
    label: "Assert recipe before validation (2 persons, 200g, 100g)"

- tapOn:
    id: "RecipeValidate"
    label: "Validate the recipe"

- runFlow:
    file: "../../../asserts/alerts/en/recipeAddedToDatabase.yaml"
    env:
      RECIPE_NAME: "Test Recipe"
    label: "Assert recipe added successfully"

- tapOn:
    id: "ReduceButton::RoundButton"
    label: "Collapse FAB menu"

- tapOn:
    id: "BottomTabs::Search"
    label: "Navigate to Search screen"

- tapOn:
    id: "SearchScreen::SearchBar"
    label: "Focus on search bar"

- inputText:
    text: "Test Recipe"
    label: "Search for Test Recipe"

- pressKey: "ENTER"

- tapOn:
    id: "SearchScreen::RecipeCards::0::Cover"
    label: "Open Test Recipe from search results"

- runFlow:
    file: "../../../asserts/recipe/readonly/en/testRecipeFor4Persons.yaml"
    label: "Assert recipe scaled to 4 persons (400g, 200g)"

- tapOn:
    id: "RecipeDelete::RoundButton"
    label: "Delete the recipe"

- tapOn:
    id: "Recipe::Dialog::Confirm"
    label: "Confirm recipe deletion"

- tapOn:
    id: "Recipe::Dialog::Confirm"
    label: "Close deletion validation moda"

- tapOn:
    id: "SearchScreen::FiltersSelection::0::Chip"
    label: "Remove filter"

- tapOn:
    id: "BottomTabs::Home"
    label: "Return to Home screen"
